fixing size on mobile

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -131,8 +131,10 @@
    -webkit-overflow-scrolling:touch !important;
    overflow-y: scroll !important;
    @media only screen and (max-width: 480px), only screen and (max-device-width: 480px) {
+     padding-top: 10px;
+     padding-right: 10px;
+     padding-left: 10px;
      height: 60%;
-     width: 95%;
    }
  }
  .fitpage {
